Adding service framework

--- a/src/main/resources/site/pages/default/default.html
+++ b/src/main/resources/site/pages/default/default.html
@@ -21,6 +21,6 @@
 <footer class="sticky-footer"></footer>
 
 <script src="{{assetsUri}}/js/jquery-3.3.1.min.js"></script>
-<script src="{{assetsUri}}/js/main.js"></script>
+<script src="{{assetsUri}}/js/main.js" data-svcurl="{{svcUrl}}"></script>
 </body>
 </html>
